fixed spacing issue with cards and about section

--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@
         font-family: Arial, Helvetica, sans-serif;
     }
 
-    .tech{
+    /* .tech{
             float: left;
             background-color: rgb(7, 13, 44);
             height: 110px;
@@ -73,7 +73,7 @@
             margin-right: -150px;
             margin-left: 180px;
             margin-top: -180px;
-    }
+    } */
     
 
     
@@ -90,7 +90,7 @@
         width: 500px;
         height: 300px;
         margin: 0 auto;
-        margin-top: -140px;
+        margin-top: -240px;
         /* background-color: rgb(74, 77, 92); */
 
         /* margin makes stuff move */
@@ -112,7 +112,7 @@
         width: 260px;
         height: 50px;
         margin: 0 auto;
-        margin-top: 50px;
+        margin-top: 210px;
         /* margin makes stuff move */
         margin-left: 135px;
         margin-right: 10px;
@@ -123,7 +123,7 @@
         display: flex;
         justify-content: left;
         margin-left: 160px;
-        margin-top: 160px;
+        margin-top: 310px;
         flex-wrap: wrap;
     }
     
